--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<img src="contact.jpg" alt="contact-pic" >
 		</div>
 		<div class="contact-buttons">
-      		<p>Please don't hesitate to contact me, I would love to hear from you!</p>
+      		<p>Please don't hesitate to contact me. I would love to hear from you!</p>
       		<div class="button">
 	      		<a href="mailto:mbuzzas3@gmail.com" class="link" title="Email">
 	      			<i class="fa fa-envelope" aria-hidden="true"></i>
