--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	      		<img src="megan.jpg" alt="about-pic">
 	      	</div>			
 			<div class="about-text">
-	      		<p>My name is Megan Buzzas. I was born and raised in Bozeman, Montana and currently live in Minneapolis. In 2015 I moved to Los Angeles where my background in engineering and passion to continue learning led me to my current position as a Full Stack Web Developer. I am passionate about building state-of-the-art, user friendly websites and applications. In my spare time I love to cook, try new foods, and explore in the outdoors. I am an extrovert and love being around people who inspire and encourage me. I always love meeting new people so please connect with me below!</p>
+	      		<p>My name is Megan Buzzas. I was born and raised in Bozeman, Montana and currently live in Minneapolis. In 2015 I moved to Los Angeles where my background in engineering and passion to continue learning led me to my current position as a Full Stack Web Developer. I am passionate about building state-of-the-art, user friendly websites and applications. In my spare time I love to cook, try new foods and explore the outdoors. I am an extrovert and love being around people who inspire and encourage me. I always love meeting new people so please connect with me below!</p>
 	      	</div>
 	    </div>
 	</div>
